5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1593_1803.log
== TEST (2019-03-22 12:38:45) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=d1/100

print(a)
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:39:21) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)

print(a)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:43:03) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int()
y=int()


d=(d1%10)

print(a)
print()
print()
print(d)
-- OUTPUT:
2


0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:44:10) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int()

c=(x%10)
d=(d1%10)

print(a)
print()
print(c)
print(d)
-- OUTPUT:
2

0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:45:51) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:48:02) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1(a)
r2(b)
r3(c)
r4(d)

print(a*5)
print(b*4)
print(c*3)
print(d*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r1(a)
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:49:00) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=a
r2=b
r3=c
r4=d

print(a*5)
print(b*4)
print(c*3)
print(d*2)
-- OUTPUT:
10
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:49:00) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=a
r2=b
r3=c
r4=d

print(a*5)
print(b*4)
print(c*3)
print(d*2)
-- OUTPUT:
10
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:50:17) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

print(a*5)
print(b*4)
print(c*3)
print(d*2)
-- OUTPUT:
10
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:54:32) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1(a*5)
r2(b*4)
r3(c*3)
r4(d*2)

s=r1+r2+r3+r4/11

print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r1(a*5)
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:54:32) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1(a*5)
r2(b*4)
r3(c*3)
r4(d*2)

s=r1+r2+r3+r4/11

print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r1(a*5)
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:54:49) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=r1+r2+r3+r4/11

print(s)

-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:56:06) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=r1+r2+r3+r4/11

print(int(s))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:56:34) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=r1+r2+r3+r4%11

print(int(s))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:57:07) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=(r1+r2+r3+r4)%11

print(int(s))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:57:17) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=(r1+r2+r3+r4)%11

print(int(s))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:57:27) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=(r1+r2+r3+r4)%11

print(int(s))

-- EXECUTION TIME:
0.15691
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:33:58) 
-- CODE:
d1=int(input("escreva os quatro digitos:"))

a=int(d1/1000)
x=int(d1/100)
y=int(d1/10)
b=(x%10)
c=(y%10)
d=(d1%10)

r1=(a*5)
r2=(b*4)
r3=(c*3)
r4=(d*2)

s=(r1+r2+r3+r4)%11

print(int(s))

-- EXECUTION TIME:
0.152909
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
